--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="font-roboto text-light-onSurface bg-light-background dark:text-dark-onSurface dark:bg-dark-background">
   <app-root></app-root>
 </body>
 </html>
