--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="font-roboto text-light-onSurface bg-light-background dark:text-dark-onSurface dark:bg-dark-background">
+<body class="font-roboto text-light-onSurface bg-light-background dark:text-dark-onSurface dark:bg-dark-background scroll-smooth">
   <app-root></app-root>
 </body>
 </html>
